--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "next": "10.2.3",
+    "preact": "^10.5.13",
+    "preact-compat": "^3.19.0",
+    "preact-render-to-string": "^5.1.19",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sanctuary": "^3.1.0",
