--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "next": "10.2.3",
+    "next-plugin-preact": "^3.0.6",
     "preact": "^10.5.13",
     "preact-compat": "^3.19.0",
     "preact-render-to-string": "^5.1.19",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
+    "react-ssr-prepass": "npm:preact-ssr-prepass",
     "sanctuary": "^3.1.0",
     "sass": "^1.34.1"
   },
